--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,12 @@
 add_compile_options(-O0)
 
 add_executable(test_logging test_logging.cpp)
-target_link_libraries(test_logging objects)
+target_link_libraries(test_logging cpp_objects)
 
 
 add_executable(test_io test_io.cpp)
-target_link_libraries(test_io objects)
+target_link_libraries(test_io cpp_objects)
 
 
 add_executable(test_gas test_gas.cpp)
-target_link_libraries(test_gas objects)
+target_link_libraries(test_gas cpp_objects)
